demo: fixing -15px margins (which removes horizontal scroll bar)

--- a/demo/src/style/app.scss
+++ b/demo/src/style/app.scss
@@ -40,8 +40,8 @@ header.navbar {
 }
 
 .sidebar-collapsed {
-  margin-left: -15px;
-  margin-right: -15px;
+  margin-left: calc(var(--bs-gutter-x) * -0.5);
+  margin-right: calc(var(--bs-gutter-x) * -0.5);
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
@@ -60,8 +60,8 @@ header.navbar {
 }
 
 header.title {
-  margin-left: -15px;
-  margin-right: -15px;
+  margin-left: calc(var(--bs-gutter-x) * -0.5);
+  margin-right: calc(var(--bs-gutter-x) * -0.5);
   position: relative;
 
   .content-tabset {
